--- a/NSImageCropper/Main.storyboard
+++ b/NSImageCropper/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="L56-j5-0ak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="L56-j5-0ak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="57h-fK-m6a">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="471"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img" translatesAutoresizingMaskIntoConstraints="NO" id="fai-wF-XXp">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="470"/>
@@ -30,8 +30,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="fai-wF-XXp" firstAttribute="top" secondItem="57h-fK-m6a" secondAttribute="top" id="2ZY-5d-ph7"/>
-                                    <constraint firstItem="fai-wF-XXp" firstAttribute="centerY" secondItem="57h-fK-m6a" secondAttribute="centerY" constant="-66.5" id="CFW-t0-8l4"/>
-                                    <constraint firstAttribute="bottom" secondItem="fai-wF-XXp" secondAttribute="bottom" constant="133" id="KTk-ac-e0y"/>
+                                    <constraint firstItem="fai-wF-XXp" firstAttribute="centerY" secondItem="57h-fK-m6a" secondAttribute="centerY" constant="-0.5" id="CFW-t0-8l4"/>
+                                    <constraint firstAttribute="bottom" secondItem="fai-wF-XXp" secondAttribute="bottom" constant="1" id="KTk-ac-e0y"/>
                                     <constraint firstAttribute="trailing" secondItem="fai-wF-XXp" secondAttribute="trailing" id="T8Q-qS-aQo"/>
                                     <constraint firstItem="fai-wF-XXp" firstAttribute="centerX" secondItem="57h-fK-m6a" secondAttribute="centerX" id="Yug-gg-TIC"/>
                                     <constraint firstItem="fai-wF-XXp" firstAttribute="leading" secondItem="57h-fK-m6a" secondAttribute="leading" id="min-Ry-dQg"/>
@@ -44,8 +44,12 @@
                                     <constraint firstAttribute="height" constant="211" id="Oqe-f3-lDn"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tvx-1A-Zy2">
-                                <rect key="frame" x="132" y="617" width="93" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tvx-1A-Zy2">
+                                <rect key="frame" x="138" y="534" width="93" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="93" id="YcD-OW-B0r"/>
+                                    <constraint firstAttribute="height" constant="30" id="b8X-Oe-m2J"/>
+                                </constraints>
                                 <state key="normal" title="CROP"/>
                                 <connections>
                                     <action selector="crop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hZg-18-aIP"/>
@@ -54,15 +58,15 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Tvx-1A-Zy2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-9" id="1l6-k9-kkO"/>
-                            <constraint firstItem="57h-fK-m6a" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="2qb-uk-zNX"/>
+                            <constraint firstItem="57h-fK-m6a" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="-132" id="2qb-uk-zNX"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Tvx-1A-Zy2" secondAttribute="bottom" constant="39" id="AeE-uI-bST"/>
                             <constraint firstItem="Nzl-kQ-fMv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="25" id="Myz-gf-qCK"/>
                             <constraint firstItem="Nzl-kQ-fMv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="127" id="SJg-7L-czO"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Tvx-1A-Zy2" secondAttribute="bottom" constant="20" id="YlA-Eq-eXV"/>
                             <constraint firstAttribute="trailing" secondItem="57h-fK-m6a" secondAttribute="trailing" id="ZwG-mQ-beX"/>
                             <constraint firstItem="57h-fK-m6a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ddC-kh-skA"/>
                             <constraint firstAttribute="trailing" secondItem="Nzl-kQ-fMv" secondAttribute="trailing" constant="25" id="kIV-5x-bs4"/>
                             <constraint firstItem="57h-fK-m6a" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="obG-3z-19d"/>
+                            <constraint firstItem="Tvx-1A-Zy2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="122" id="yEt-IK-jxE"/>
                         </constraints>
                     </view>
                     <connections>
@@ -73,7 +77,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="970" y="130"/>
+            <point key="canvasLocation" x="968.79999999999995" y="129.98500749625188"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="0g9-de-Ohm">
